@@ -1,14 +1,21 @@
 body {
-  margin: 0.5%;
+  margin: 0.2%;
   font-size: 16px;
-  color: #fff;
-  background-color: #ffffff;
-  font-family: 'Oxygen', sans-serif;
+  color: #7cb2c7;
+  background-color: #94bbca;
+  font-family: 'Times New Roman';
+}
+a {
+  color:rgb(255, 253, 253);
+}
+a:hover{
+  color: rgb(44, 95, 110);
+  text-decoration: underline;
 }
 
 /** HEADER **/
 #header-nav {
-  background-color: #000000;
+  background-color: rgb(238, 239, 241);
   border-radius: 0px;
   border: 0;
 }
@@ -17,7 +24,7 @@ body {
 }
 .navbar-brand h1 { /*Bank Name*/
   font-family: 'Times New Roman';
-  color: #fff;
+  color: #7cb2c7;
   font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
@@ -39,13 +46,19 @@ body {
 
 #nav-list {
   margin-top: 10px;
+  font-family: 'Times New Roman';
+  color: #75b2ca;
+  font-weight: bold;
+  text-shadow: 0.3px 0.3px 0.3px #222;
+  font-size: 1.1em;
 }
 #nav-list a {
-  color: #ffffff;
-  text-align: center;
+  color: #7cb2c7;
+  text-align: left;
 }
 #nav-list a:hover {
-  background: #313030;
+ /* background: #313030;*/
+  text-decoration: underline;
 }
 #nav-list a span {
   font-size: 1.8em;
@@ -67,12 +80,15 @@ body {
 .form-container{
   margin-top: 50px;
 }
-.btn-info{
+.btn:hover{
+  background-color:rgb(44, 95, 110);
+}
+.btn-info,button{
     font-family: 'Times New Roman';
     font-size: medium;
     color: #000;
-    background-color: #868686;
-    border-color: #000000;
+    background-color: rgb(84, 117, 128);
+    border-color: white;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -80,17 +96,22 @@ body {
 /* FOOTER */
 .panel-footer {
   margin-top: 30px;
-  padding-top: 35px;
-  padding-bottom: 30px;
-  background-color: rgb(0, 0, 0);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #404f55;
   border-top: 0;
   border-radius: 0px;
 }
 .panel-footer div.row {
-  margin-bottom: 35px;
+  /*margin-bottom: 35px;*/
 }
 #hours, #address {
   line-height: 2;
+  font-family: 'Times New Roman';
+  color: rgb(202, 202, 202);
+}
+.cr {
+  color: rgb(202, 202, 202);
 }
 #hours > span, #address > span {
   font-size: 1.3em;
@@ -101,34 +122,35 @@ body {
   line-height: 1.8;
 }
 #input-group,input{
-  background-color: #000000;
+  background-color: transparent;
   border: 1px;
   border-color: #fff;
   border-bottom-style: outset;
   outline: none;
 }
 textarea{
-  background-color: #000000;
+  background-color: transparent;
   border: 1px;
+  width: auto;
   border-color: #fff;
   border-bottom-style: outset;
   outline-color: #fff;
   outline: none;
-}/*
-a {
-  color:black;
 }
-.btn:hover{
-  background-color: #fff;
-}*/
+.button,.btn{
+  color: rgb(202, 202, 202);
+}
+.button:hover{
+ color: rgb(202, 202, 202);
+}
 /* END FOOTER */
 
 
 
 /* HOME PAGE */
 .container {
-  
   border:0px;
+  padding-right: 30px;
 }
 #myCarousel{
   width:fit-content;
@@ -144,8 +166,21 @@ a {
   text-align: center;
 }
 #main-content{
+  background-color: #95b5c2;
   border:0px solid black;
   color: #000;
+  font-family: 'Times New Roman';
+}
+.h1, h1{
+  font-family: 'Times New Roman';
+  color: rgb(44, 95, 110);
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
 }
 /*blog*/
 .blogs-heading{
@@ -159,6 +194,14 @@ a {
 }
 /*----*/
 /*---faqs styling-*/
+.panel-default>.panel-heading{
+  color: #000;
+  background-color: #497283;
+  border-color: #000;
+}
+.panel-default {
+  border-color: black;
+}
 .faqHeader {
   font-size: 27px;
   margin: 20px;
@@ -191,8 +234,8 @@ a {
 .news-section{
   margin-top: 5px;
   border: 1px solid black;
-  background-color: black;
-  color: #fff;
+  background-color: #4fa7ca;
+  color: black;
   
 }
 /*-----*/
@@ -246,8 +289,8 @@ a {
   margin: 3px;
   margin-left: 40px;
   border: 1px solid black;
-  background-color: black;
-  color: #fff;
+  background-color: #4fa7ca;
+  color: black;
   width: 30%;
   
 }
@@ -270,8 +313,8 @@ a {
   margin: 3px;
   margin-left: 40px;
   border: 1px solid black;
-  background-color: black;
-  color: #fff;
+  background-color: #4fa7ca;
+  color: #000;
   width: 50%;
   
 }
@@ -282,6 +325,15 @@ a {
   /* Home Page */
   .flex-container {
     display: flex;
+  }
+  .news-section{
+    margin: 1px;
+    margin-left: 20px;
+    border: 1px solid black;
+    background-color: #4fa7ca;
+    color: #000;
+    width: 50%;
+    
   }
   }
   /* End Home Page */
