@@ -15,5 +15,7 @@
     </div>
 
 <% } else { %>
-    <button><a href="/user/login">LOGIN</a></button>
+  <!--
+    <button><a href="/user/login">LOGIN</a></button>-->
+    <!------removed here login button from personal banking page already in header-->
 <% } %>
