@@ -1,12 +1,6 @@
 <footer class="panel-footer">
     <div class="container">
       <div class="row">
-        <section id="hours" class="col-sm-4">
-          <span>Hours:</span><br>
-          Sun-Sat: 9:00am - 5:00pm<br>
-          Saturday Closed
-          <hr class="visible-xs">
-        </section>
         <section id="address" class="col-sm-4">
           <span>Contact Form:</span><br>
           <div class="input-group">
@@ -19,15 +13,21 @@
           <a class="button expanded" href="#">Submit</a>
           <hr class="visible-xs">
         </section>
+        <section id="hours" class="col-sm-4">
+          <span>Hours:</span><br>
+          Sun-Sat: 9:00am - 5:00pm<br>
+          Saturday Closed
+          <hr class="visible-xs">
+        </section>
         <section id="address" class="col-sm-4">
           <span>Contact details:</span><br>
-          <a href="tel:+919199110501">919919919</a><br>
+          <a class="button expanded" href="tel:+919199110501">919919919</a><br>
           Delhi Technological University, Shahbad Daulatpur<br>
           Main Bawana Road, DL - 42, IN<br>
           New Delhi
           <hr class="visible-xs">
         </section>
       </div>
-      <div class="text-center">&copy; Copyright Harsh/Danish DTU 2020</div>
+      <div class="text-center cr">&copy; Copyright Harsh/Danish DTU 2020</div>
     </div>
   </footer>
