@@ -10,7 +10,7 @@
                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">1. What is Online DTU BANKING?</a>
                     </h4>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse in">
+                <div id="collapseOne" class="panel-collapse collapse">
                     <div class="panel-body">
                       Online DTU BANKING is the Internet banking service provided by Delhi Technological University, DTU first personalised bank.
                     </div>
